// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when providing a URL string 1`] = `
<DocumentFragment>
  <div
    class="relative md:-top-20 md:-mb-20 p-10 md:p-32 bg-scroll bg-cover bg-no-repeat flex justify-end"
  >
    <img
      alt=""
      src="https://via.placeholder.com/500x500"
    />
    <div
      class="flex flex-col justify-center w-1/2 z-10"
    />
    <div
      class="absolute inset-0 overflow-hidden"
    >
      <svg
        class="text-white overflow-visible absolute top-0 right-0 transform translate-x-1/4 -translate-y-2/4
    "
        height="614.4"
        width="614.4"
      >
        <circle
          class="stroke-current"
          cx="307.2"
          cy="307.2"
          fill-opacity="0"
          opacity="0.1"
          r="307.2"
          stroke-width="20px"
        />
      </svg>
      <svg
        class="text-white overflow-visible absolute bottom-0 left-0 transform -translate-x-1/4 translate-y-2/4
    "
        height="709.9733333333334"
        width="709.9733333333334"
      >
        <circle
          class="stroke-current"
          cx="354.9866666666667"
          cy="354.9866666666667"
          fill-opacity="0"
          opacity="0.5"
          r="354.9866666666667"
          stroke-width="20px"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly when providing static image data 1`] = `
<DocumentFragment>
  <div
    class="relative md:-top-20 md:-mb-20 p-10 md:p-32 bg-scroll bg-cover bg-no-repeat flex justify-start"
  >
    <img
      alt=""
      src="[object Object]"
    />
    <div
      class="flex flex-col justify-center w-1/2 z-10"
    />
    <div
      class="absolute inset-0 overflow-hidden"
    >
      <svg
        class="text-white overflow-visible absolute top-0 right-0 transform translate-x-1/4 -translate-y-2/4
    "
        height="614.4"
        width="614.4"
      >
        <circle
          class="stroke-current"
          cx="307.2"
          cy="307.2"
          fill-opacity="0"
          opacity="0.1"
          r="307.2"
          stroke-width="20px"
        />
      </svg>
      <svg
        class="text-white overflow-visible absolute bottom-0 left-0 transform -translate-x-1/4 translate-y-2/4
    "
        height="709.9733333333334"
        width="709.9733333333334"
      >
        <circle
          class="stroke-current"
          cx="354.9866666666667"
          cy="354.9866666666667"
          fill-opacity="0"
          opacity="0.5"
          r="354.9866666666667"
          stroke-width="20px"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
